--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-opencv-python
-numpy
-face_recognition
-Pillow
+streamlit>=1.0
+opencv-python>=4.5.5
+numpy>=1.19.5
+face_recognition>=1.3.0
+Pillow>=8.2.0
